@@ -1,3 +1,8 @@
+2014-05-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* bmpimage.c: Error exit instead of crashing for unsupported
+	OS2 bmp inclusion in bmp_include_image().
+
 2014-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dvipdfmx.c: Move special-case single option --help or --version
